Fix bug causing user/sub title to appear off-center.

--- a/static/style.css
+++ b/static/style.css
@@ -397,7 +397,6 @@ aside {
 }
 
 #user_title, #sub_title {
-	margin: 0 20px;
 	font-size: 20px;
 	font-weight: bold;
 }
